src/kubernetes/events-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-service
  template:
    metadata:
      labels:
        app: events-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: events-service
          image: ghcr.io/anijeyranyan/cinemaabyss/events-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /api/events/health
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: cinemaabyss
spec:
  selector:
    app: events-service
  ports:
    - port: 8082
      targetPort: 8082
