src/kubernetes/monolith.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith
  namespace: cinemaabyss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monolith
  template:
    metadata:
      labels:
        app: monolith
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: monolith
          image: ghcr.io/anijeyranyan/cinemaabyss/monolith:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: monolith
  namespace: cinemaabyss
spec:
  selector:
    app: monolith
  ports:
    - port: 8080
      targetPort: 8080
