src/kubernetes/movies-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-service
  namespace: cinemaabyss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movies-service
  template:
    metadata:
      labels:
        app: movies-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: movies-service
          image: ghcr.io/anijeyranyan/cinemaabyss/movies-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /api/movies/health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: movies-service
  namespace: cinemaabyss
spec:
  selector:
    app: movies-service
  ports:
    - port: 8081
      targetPort: 8081
